--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.8",
+    "@nextui-org/react": "^2.1.10",
+    "framer-motion": "^10.16.4",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3",
