--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.8",
     "@nextui-org/react": "^2.1.10",
+    "flowbite": "^2.2.0",
     "framer-motion": "^10.16.4",
     "micromodal": "^0.4.10",
     "sharp": "^0.32.5",
